Adjust book content alignment so all is justify center. Increase book container height. Fix long word issue
There was an issue where if you entered one long word the text would overflow from the book container. Fixed that so a long word will wrap, and increased book height to give sufficient room for content with very long titles entered

--- a/styles.css
+++ b/styles.css
@@ -83,18 +83,20 @@ body {
 .book {
     display: grid;
     gap: 10px;
-    height: 20rem;
+    height: 30rem;
     border: solid 10px;
     border-radius: 15px;
     padding: 10px;
+    justify-items: center;
+    text-align: center;
+    word-break: break-word;
 }
 
-.bookinfo {
-    align-self: start;
+.book-info {
+    align-self: center;
 }
 
 .btn-container {
-    justify-self: center;
     align-self: end;
     
 }
